// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snap Math.random 1`] = `
Object {
  "id": Any<Number>,
  "name": "Bee",
}
`;

exports[`snap correctly 1`] = `
"<div>
  <h1>标题 title</h1>
  </div>"
`;

exports[`snap test 1`] = `
"<div>
  <h2>Hello World</h2>
  </div>"
`;
